tests/expected_invalid_parse_missing_return_type.diag.out
<input>:2:21: error: expected return type after '->'
    public fn main() -> {
                        ^
<input>:13:1: error: expected return type after '->'
    }
    ^
